MDEV-4712 : Fix "shutdown" test.

There is a race condition during shutdown, that happens when "show status" runs during shutdown. 
Functions show_slave_running(), show_slave_received_heartbeats(), show_heartbeat_period() would dereference NULL pointer master_info_index, after this variable is  set to NULL in slave_end() during shutdown.
Fix introduces check for master_info_index == NULL in the affected functions.